<?xml version="1.0" encoding="utf-8"?>




<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#cae6ca">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->



<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="30dp"
    android:elevation="5dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userOrderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#FFFFFF"
            android:text="Product Name" />

        <TextView
            android:id="@+id/userOrderDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="#FFFFFF"
            android:text="description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/order_date_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="@string/order_date_text" />
            <TextView
                android:id="@+id/userOrderDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="Order Date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/delivery_date_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="@string/delivery_date_text" />
            <TextView
                android:id="@+id/userOrderDeliveryDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="Delivery Date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/status_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="@string/status_text" />
            <TextView
                android:id="@+id/userOrderStatus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="Status" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="@string/quantity_text" />
            <TextView
                android:id="@+id/userOrderQuantity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="Quantity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/price_per_item_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="@string/price_per_item_text" />
            <TextView
                android:id="@+id/userOrderPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="Price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="@string/total_price_text" />
            <TextView
                android:id="@+id/userOrderTotal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#FFFFFF"
                android:text="Total" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
<!--    </LinearLayout>-->

<!--</RelativeLayout>-->