<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cae6ca"
    tools:context="Meadberry_Farms.example.foodapp.PaymentModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_mode"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:background="#cae6ca">
        </ImageView>

        <TextView
            android:id="@+id/payment_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/payment_type_text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal">
        </TextView>

        <TableRow
            android:id="@+id/hr1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectingLanguage" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hr2">

            <RadioButton
                android:id="@+id/Hindi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:layoutDirection="rtl"
                android:paddingVertical="10dp"
                android:paddingLeft="23dp"
                android:text="@string/cash_on_delivery_option"
                android:fontFamily="@font/poppins_medium"
                android:textSize="23sp" />

            <TableRow
                android:id="@+id/hr2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectingLanguage" />

<!--            <RadioButton-->
<!--                android:id="@+id/English"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:buttonTint="@color/colorPrimary"-->
<!--                android:layoutDirection="rtl"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:paddingLeft="23dp"-->
<!--                android:text="@string/online_payment_option"-->
<!--                android:fontFamily="@font/poppins_medium"-->
<!--                android:textSize="23sp" />-->
        </RadioGroup>

        <TableRow
            android:id="@+id/hr3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectingLanguage" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continueBtn"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="20dp"
                android:background="@drawable/btn_rounded"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:layout_marginBottom="100dp"
                android:drawableRight="@drawable/small_arrow"
                android:textColor="#FFFFFF">
            </Button>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>