<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterOTPActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:src="@drawable/forgot2"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>

            <TextView
                android:id="@+id/enter_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/enter_otp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"></TextView>

            <TextView
                android:id="@+id/four_digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:textAlignment="center"
                android:text="@string/four_digit"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">


                <EditText
                    android:id="@+id/otp1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#bed4c4"
                    android:textColor="@color/colorPrimaryDark"
                    android:ems="10"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:inputType="number"
                    android:paddingTop="2dp"
                    android:textSize="20sp"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/otp2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#bed4c4"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/poppins_medium"

                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:paddingTop="2dp"
                    android:textSize="20sp"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/otp3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#bed4c4"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/poppins_medium"

                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:paddingTop="2dp"
                    android:textSize="20sp"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/otp4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#bed4c4"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/poppins_medium"

                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:paddingTop="2dp"
                    android:textSize="20sp"
                    android:maxLength="1"/>
            </LinearLayout>

            <Button
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:minHeight="0dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/resend_otp"
                android:fontFamily="@font/poppins_medium"

                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout10"></Button>

            <TextView
                android:id="@+id/change_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:minHeight="0dp"
                android:text="@string/change_phone_number"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"></TextView>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                app:layout_constraintBottom_toTopOf="@+id/nextBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"></ImageButton>


            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:width="300dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/next_btn"
                android:drawableRight="@drawable/login_btn_arrow"
                android:paddingLeft="35dp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#ffffff"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>